fixed glossary error and changed citation style

--- a/0.1.0/template/items.bib
+++ b/0.1.0/template/items.bib
@@ -98,3 +98,25 @@ done | pbcopy
   pages     = {39-54},
   doi       = {10.1016/j.cvsm.2009.09.002}
 }
+
+@article{feldman_diabetic_2019,
+	title = {Diabetic neuropathy},
+	volume = {5},
+	rights = {2019 Springer Nature Limited},
+	issn = {2056-676X},
+	url = {https://www.nature.com/articles/s41572-019-0092-1},
+	doi = {10.1038/s41572-019-0092-1},
+	abstract = {The global epidemic of prediabetes and diabetes has led to a corresponding epidemic of complications of these disorders. The most prevalent complication is neuropathy, of which distal symmetric polyneuropathy (for the purpose of this Primer, referred to as diabetic neuropathy) is very common. Diabetic neuropathy is a loss of sensory function beginning distally in the lower extremities that is also characterized by pain and substantial morbidity. Over time, at least 50\% of individuals with diabetes develop diabetic neuropathy. Glucose control effectively halts the progression of diabetic neuropathy in patients with type 1 diabetes mellitus, but the effects are more modest in those with type 2 diabetes mellitus. These findings have led to new efforts to understand the aetiology of diabetic neuropathy, along with new 2017 recommendations on approaches to prevent and treat this disorder that are specific for each type of diabetes. In parallel, new guidelines for the treatment of painful diabetic neuropathy using distinct classes of drugs, with an emphasis on avoiding opioid use, have been issued. Although our understanding of the complexities of diabetic neuropathy has substantially evolved over the past decade, the distinct mechanisms underlying neuropathy in type 1 and type 2 diabetes remains unknown. Future discoveries on disease pathogenesis will be crucial to successfully address all aspects of diabetic neuropathy, from prevention to treatment.},
+	pages = {1--18},
+	number = {1},
+	journaltitle = {Nature Reviews Disease Primers},
+	shortjournal = {Nat Rev Dis Primers},
+	author = {Feldman, Eva L. and Callaghan, Brian C. and Pop-Busui, Rodica and Zochodne, Douglas W. and Wright, Douglas E. and Bennett, David L. and Bril, Vera and Russell, James W. and Viswanathan, Vijay},
+	urldate = {2023-07-04},
+	date = {2019-06-13},
+	langid = {english},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	keywords = {Diabetes complications, Diseases of the nervous system, Neurological disorders, Peripheral neuropathies},
+	file = {Full Text PDF:C\:\\Users\\rapha\\Zotero\\storage\\JNBHWIEW\\Feldman et al. - 2019 - Diabetic neuropathy.pdf:application/pdf},
+}
